back prop all messed up

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,14 @@
         "xutility": "cpp",
         "algorithm": "cpp",
         "random": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "filesystem": "cpp",
+        "array": "cpp",
+        "map": "cpp",
+        "mutex": "cpp",
+        "set": "cpp",
+        "stop_token": "cpp",
+        "thread": "cpp",
+        "xtree": "cpp"
     }
 }
